--- a/TuanQD_MockProject/app/src/main/res/layout/item_top_albums_artist_details.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_top_albums_artist_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="TopAlbumsModel"
-            type="com.tuanqd.mockproject.songs.artist.TopAlbumsModel" />
+            type="com.tuanqd.mockproject.songs.artist.artistdetails.TopAlbumsModel" />
     </data>
 
     <androidx.cardview.widget.CardView
