--- a/TuanQD_MockProject/app/src/main/res/layout/item_topsongs_artist_details.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_topsongs_artist_details.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="TopSongsModel"
-            type="com.tuanqd.mockproject.songs.artist.TopSongsModel" />
+            type="com.tuanqd.mockproject.songs.artist.artistdetails.TopSongsModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
