--- a/TuanQD_MockProject/app/src/main/res/layout/recycler_view_artist_detail.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/recycler_view_artist_detail.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="ArtistDetailsModel"
-            type="com.tuanqd.mockproject.songs.artist.ArtistDetailsModel" />
+            type="com.tuanqd.mockproject.songs.artist.artistdetails.ArtistDetailsModel" />
     </data>
 
     <RelativeLayout
