--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_artist.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_artist.xml
@@ -9,6 +9,7 @@
     android:paddingEnd="20dp"
    android:layout_marginTop="20dp">
   <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recycler_view_artist"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 </LinearLayout>
