--- a/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
 
         <variable
@@ -40,18 +39,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:background="@drawable/stroke_popup_menu">
                 <TextView
                     android:id="@+id/txtArtist"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
+                    android:hint="@string/title"
+                    android:textColorHint="@color/white"
                     android:ellipsize="end"
-                    android:maxLength="30"
+                    android:maxLength="15"
                     android:maxLines="1"
                     android:text="@{AllSongsModel.title}"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -62,6 +62,9 @@
                     android:layout_height="wrap_content"
                     android:text="@{AllSongsModel.artist}"
                     android:textColor="@color/white"
+                    android:hint="@string/artist"
+                    android:textSize="12sp"
+                    android:textColorHint="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/txtArtist"
                     app:layout_constraintHorizontal_bias="0.0"
