--- a/TuanQD_MockProject/app/src/main/res/layout/notification_music_layout.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/notification_music_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="#b88870"
     android:layout_height="64dp">
 
     <ImageView
@@ -23,6 +24,7 @@
         android:layout_width="117dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/tv_artist"
+        android:textColor="@color/text_fade"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
@@ -35,6 +37,7 @@
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:textColor="@color/text_fade"
         android:layout_centerVertical="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
@@ -52,7 +55,7 @@
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="20dp"
         android:layout_toStartOf="@+id/img_next_notification_button"
-        android:src="@drawable/ic_play_music" />
+        android:src="@drawable/ic_play_notification" />
 
     <ImageView
         android:id="@+id/exit_notification_button"
