--- a/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
+++ b/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,8 @@
         android:name="com.tuanqd.mockproject.settings.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/artistDetailsFragment"
+        android:name="com.tuanqd.mockproject.songs.artist.artistdetails.ArtistDetailsFragment"
+        android:label="ArtistDetailsFragment" />
 </navigation>
