--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     <style name="style_settings_fragment">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">9</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:paddingStart">20dp</item>
         <item name="android:textAlignment">viewStart</item>
@@ -39,8 +39,8 @@
     </style>
 
     <style name="style_imageView_settings_fragment">
-        <item name="android:layout_width">25dp</item>
-        <item name="android:layout_height">25dp</item>
+        <item name="android:layout_width">20dp</item>
+        <item name="android:layout_height">20dp</item>
         <item name="android:layout_gravity">center_vertical</item>
 
         <item name="android:layout_weight">1</item>
@@ -69,6 +69,14 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">0.25</item>
         <item name="android:orientation">vertical</item>
+    </style>
+    <style name="MyPopupMenu"
+        parent="@android:style/Widget.Holo.ListPopupWindow">
+        <item name="android:popupBackground">@color/background_menu</item>
+    </style>
+    <style name="TextAppearance">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
 </resources>
