--- a/TuanQD_MockProject/app/src/main/res/values/themes.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/themes.xml
@@ -15,6 +15,8 @@
     <item name="android:windowDrawsSystemBarBackgrounds">false</item>
     <item name="android:statusBarColor" tools:targetApi="l">@android:color/holo_blue_bright</item>
     <!-- Customize your theme here. -->
+    <item name="android:popupMenuStyle">@style/MyPopupMenu</item>
+    <item name="android:itemTextAppearance">@style/TextAppearance</item>
   </style>
 
   <style name="ThemeSpl" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -41,7 +43,5 @@
     <item name="android:colorBackground">@color/black</item>
     <item name="android:textColor">@color/white</item>
   </style>
-  <style name="PopupMenu" parent="android:Widget.Holo.Light.ListPopupWindow">
-    <item name="android:popupBackground">#888888</item>
-  </style>
+
 </resources>
