--- a/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
             android:id="@+id/nav_bottom_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:itemBackground="@color/black"
+            app:itemBackground="@color/background_mock"
             app:itemIconTint="@color/nav_bottom_selected"
             app:itemTextColor="@color/nav_bottom_selected"
             app:layout_constraintBottom_toBottomOf="parent"
