--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_albums.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_albums.xml
@@ -1,12 +1,18 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="15dp"
-    tools:context="com.tuanqd.mockproject.songs.albums.AlbumsFragment">
-<androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:paddingTop="20dp"
-    android:layout_height="match_parent"
-    android:paddingStart="20dp"/>
-</LinearLayout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingEnd="16dp"
+        tools:context="com.tuanqd.mockproject.songs.albums.AlbumsFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_album"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="20dp"
+            android:paddingTop="20dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
+    </LinearLayout>
+</layout>
