--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_artist_details.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_artist_details.xml
@@ -1,32 +1,31 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
 
-    android:background="@color/background_mock"
-    android:orientation="vertical"
-    tools:context="com.tuanqd.mockproject.songs.artist.artistdetails.ArtistDetailsFragment">
-
-    <ImageView
-        android:id="@+id/imageView"
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_artist_details"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recycler_view_artist_details_fragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/background_mock"
+        android:orientation="vertical"
+        android:paddingTop="40dp"
+        tools:context="com.tuanqd.mockproject.songs.artist.artistdetails.ArtistDetailsFragment">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_artist_details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_artist_details_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 </layout>
