--- a/TuanQD_MockProject/app/src/main/res/layout/item_artist_fragment.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_artist_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:bindArtist="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="ArtistModel"
@@ -33,7 +32,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                bind:imageBitmap="@{ArtistModel.imageArtist}"
+                bindArtist:imageBitmap="@{ArtistModel.imageArtist}"
                 android:src="@drawable/anh_dep_home"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
