--- a/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
+++ b/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,9 @@
     <fragment
         android:id="@+id/artistDetailsFragment"
         android:name="com.tuanqd.mockproject.songs.artist.artistdetails.ArtistDetailsFragment"
-        android:label="ArtistDetailsFragment" />
+        android:label="Artist Details" />
+    <fragment
+        android:id="@+id/albumDetailFragment"
+        android:name="com.tuanqd.mockproject.songs.albums.albumdetail.AlbumDetailFragment"
+        android:label="Album Details" />
 </navigation>
