--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -78,5 +78,9 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">13sp</item>
     </style>
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/white</item>
+    </style>
 
 </resources>
