--- a/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:openDrawer="start">
 
-
             <include
                 android:id="@+id/app_bar_main"
                 layout="@layout/app_bar_main"
@@ -61,8 +60,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_content_main"
             app:layout_constraintVertical_bias="0.985"
-            app:menu="@menu/menu_bottom_nav">
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+            app:menu="@menu/menu_bottom_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
 
     </LinearLayout>
 </layout>
