--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -81,6 +81,11 @@
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <!-- Customize color of navigation drawer icon and back arrow -->
         <item name="colorControlNormal">@color/white</item>
+        <item name="autoCompleteTextViewStyle">@style/SearchAutoCompleteTextView</item>
+    </style>
+    <style name="SearchAutoCompleteTextView" parent="Widget.AppCompat.Light.AutoCompleteTextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/text_fade</item>
     </style>
 
 </resources>
