--- a/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,7 +59,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_content_main"
             app:layout_constraintVertical_bias="0.985"
-            app:menu="@menu/menu_bottom_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
+            app:menu="@menu/menu_bottom_nav" />
 
     </LinearLayout>
 </layout>
