--- a/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:bindSong="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="AllSongsModel"
+            name="SongsModel"
             type="com.tuanqd.mockproject.main.SongsModel" />
     </data>
 
@@ -36,7 +36,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                bind:imageBitmap="@{AllSongsModel.bitmapSong}" />
+                bindSong:imageBitmap="@{SongsModel.songBitmap}" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -52,7 +52,7 @@
                     android:hint="@string/title"
                     android:maxLength="15"
                     android:maxLines="1"
-                    android:text="@{AllSongsModel.title}"
+                    android:text="@{SongsModel.title}"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="15sp"
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/artist"
-                    android:text="@{AllSongsModel.artist}"
+                    android:text="@{SongsModel.artist}"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:textSize="12sp"
