--- a/TuanQD_MockProject/app/src/main/res/layout/notification_music_layout.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/notification_music_layout.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/image_thumbs_notification"
-        android:layout_width="53dp"
+        android:layout_width="64dp"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
